Fix YouTube-Emoji-Reactions.css not hiding bottom poll panel
Seems to be a change in youtube layout, as the poll is now
at the bottom instead of being at the top with the rest of the banners.

Also added some other selectors to make the hiding more resilient against changes.

--- a/YouTube-Emoji-Reactions.css
+++ b/YouTube-Emoji-Reactions.css
@@ -68,13 +68,28 @@ body {
  * Hide unwanted chat elements
  */
 
+#header,
 yt-live-chat-banner-renderer,
 yt-live-chat-header-renderer,
+#live-chat-banner,
+yt-live-chat-banner-manager,
+#docked-messages,
+yt-live-chat-docked-message,
+yt-live-chat-action-panel-renderer,
 iron-pages,
 #item-offset,
 #menu,
 #separator {
   display: none;
+}
+
+
+/*
+ * Hide the gradient at the bottom when a pool is active
+ */
+
+#action-panel {
+  display: none !important;
 }
 
 
